--- a/sl-express-ms-dispatch-service/pom.xml
+++ b/sl-express-ms-dispatch-service/pom.xml
@@ -22,6 +22,7 @@
         <sl-express-ms-base-api.version>1.1-SNAPSHOT</sl-express-ms-base-api.version>
         <sl-express-ms-courier-api.version>1.1-SNAPSHOT</sl-express-ms-courier-api.version>
         <sl-express-ms-work-api.version>1.1-SNAPSHOT</sl-express-ms-work-api.version>
+        <sl-express-ms-transport-api.version>1.1-SNAPSHOT</sl-express-ms-transport-api.version>
     </properties>
 
     <dependencies>
@@ -29,6 +30,11 @@
             <groupId>com.sl-express.common</groupId>
             <artifactId>sl-express-common</artifactId>
             <version>${sl-express-common.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sl-express.ms.transport</groupId>
+            <artifactId>sl-express-ms-transport-api</artifactId>
+            <version>${sl-express-ms-transport-api.version}</version>
         </dependency>
         <dependency>
             <groupId>com.sl-express.ms.base</groupId>
