--- a/sl-express-ms-dispatch-service/src/main/resources/bootstrap-local.yml
+++ b/sl-express-ms-dispatch-service/src/main/resources/bootstrap-local.yml
@@ -29,3 +29,7 @@ spring:
           - data-id: shared-spring-xxl-job.yml
             group: SHARED_GROUP
             refresh: false
+xxl:
+  job:
+    executor:
+      ip: 192.168.150.1
